--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - "80:80"
     volumes:
       - ./frontend/:/var/www/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
     restart: always
     networks:
       - mynet
